--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
 <footer>
     <div class="rodape">
-        Feito por <a href="https://www.github.com/williamdondas" target="_blank">william Dondas</a> - 2022
+        |Desenvolvido por <a href="https://www.github.com/williamdondas" target="_blank">william Dondas</a> - 2022
     </div>
 </footer>
 </body>
