--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <h1>Retronerds Gamestore</h1>
+    <h1><img src="img/retronerds-pq1.png" alt=""></h1>
 <nav>
     <a class="ps1" href="">Home</a>
     <a href="">Produtos</a>
